# AniScript

./: CMakeLists.txt
CodeGen/: CodeGen.cpp
Parser/: Parser.cpp
Parser/Lexer/: Lexer.cpp  Lexer.h  lexer.l
Parser/Lexer/DFA/: IdentifyToken.h  Tokens.h  identifier.h  keywords.h  literal.h  numbers.h
src/: AstNode.h  Lexer.l  Parser.y  codegen.cpp  codegen.h  main.cpp
